[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/Sprites/Tileset.png" type="Texture" id=1]
[ext_resource path="res://Assets/Entities/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Bug.png" type="Texture" id=3]
[ext_resource path="res://Assets/Entities/Snow.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Scripts/Bug.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/Mask.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/backdrop.png" type="Texture" id=7]
[ext_resource path="res://Assets/Entities/Player2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Scripts/Map.gd" type="Script" id=9]
[ext_resource path="res://Assets/Sprites/Ui/Player2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Ui/Player1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Scripts/Hud.gd" type="Script" id=12]
[ext_resource path="res://Assets/Fonts/ScoreUI.tres" type="DynamicFont" id=13]
[ext_resource path="res://Assets/Sprites/Lightmask.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Ui/musicOn.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Ui/audioOff.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Ui/audioOn.png" type="Texture" id=17]
[ext_resource path="res://Assets/Music/2019-12-11_-_Retro_Platforming_-_David_Fesliyan.mp3" type="AudioStream" id=18]

[sub_resource type="OccluderPolygon2D" id=40]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=42]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=44]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=46]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=47]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=48]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=49]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=50]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=51]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=52]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=53]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=54]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=55]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=56]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=1]
0/name = "Tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 40 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 41 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 42 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 43 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 44 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 45 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 45 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 46 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 47 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 47 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tileset.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 48 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 49 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 49 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tileset.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 640, 0, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/occluder = SubResource( 50 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 51 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 51 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tileset.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 768, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/occluder = SubResource( 52 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 53 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 53 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Tileset.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 896, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/occluder = SubResource( 54 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 55 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 55 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tileset.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1024, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/occluder = SubResource( 56 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Tileset.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1152, 0, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Tileset.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1280, 0, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 24, 18 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "On",
"speed": 5.0
} ]

[node name="World" type="Node2D"]
position = Vector2( 6, 0 )
script = ExtResource( 9 )
multi_player = true

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 1275, 518 )
scale = Vector2( 10.9262, 4.12 )
z_index = -3
texture = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="TextureRect" parent="CanvasLayer/Hud"]
margin_left = 966.0
margin_top = 78.0
margin_right = 1094.0
margin_bottom = 206.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="CanvasLayer/Hud/Player1"]
margin_left = -60.0
margin_top = 105.0
margin_right = 68.0
margin_bottom = 137.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 13 )
text = "69"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="TextureRect" parent="CanvasLayer/Hud"]
margin_left = 198.0
margin_top = 78.0
margin_right = 326.0
margin_bottom = 206.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="CanvasLayer/Hud/Player2"]
margin_left = -60.0
margin_top = 105.0
margin_right = 68.0
margin_bottom = 137.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 13 )
text = "69"
align = 1
valign = 1

[node name="TimerText" type="Label" parent="CanvasLayer/Hud"]
margin_left = 552.0
margin_top = 120.0
margin_right = 592.0
margin_bottom = 136.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 13 )
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/Hud"]

[node name="Leaves" type="Node2D" parent="."]
position = Vector2( 30, -48 )
z_index = -1

[node name="Snow" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( -72, -330 )
z_index = -1

[node name="Snow2" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 210, -390 )
z_index = -1

[node name="Snow3" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 492, -54 )
z_index = -1

[node name="Snow4" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 828, -162 )
z_index = -1

[node name="Snow5" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 636, -186 )
z_index = -1

[node name="Snow6" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 84, 180 )
z_index = -1

[node name="Snow7" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 144, 66 )
z_index = -1

[node name="Snow8" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 288, -138 )
z_index = -1

[node name="Snow9" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 540, 192 )
z_index = -1

[node name="Snow10" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 378, -708 )
z_index = -1

[node name="Snow11" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 714, 228 )
z_index = -1

[node name="Snow12" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( -72, 162 )
z_index = -1

[node name="Snow13" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 930, 258 )
z_index = -1

[node name="Snow14" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 1074, 336 )
z_index = -1

[node name="Snow15" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( -30, -822 )
z_index = -1

[node name="Snow16" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 366, -828 )
z_index = -1

[node name="Snow17" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 660, -840 )
z_index = -1

[node name="Snow18" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 978, -774 )
z_index = -1

[node name="Snow19" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 786, -798 )
z_index = -1

[node name="Snow20" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 234, -432 )
z_index = -1

[node name="Snow21" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 240, -660 )
z_index = -1

[node name="Snow22" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 402, -510 )
z_index = -1

[node name="Snow23" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 636, -534 )
z_index = -1

[node name="Snow24" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 1008, -534 )
z_index = -1

[node name="Snow25" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 810, -498 )
z_index = -1

[node name="Snow26" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 234, -264 )
z_index = -1

[node name="Snow27" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 996, -264 )
z_index = -1

[node name="Snow28" parent="Leaves" instance=ExtResource( 4 )]
position = Vector2( 1140, -186 )
z_index = -1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -90, 486 )
scale = Vector2( 0.4, 0.4 )
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 262153, 3, 0, 262154, 0, 0, 262155, 6, 0, 327687, 3, 0, 327688, 0, 0, 327689, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 1, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 6, 0, 393220, 3, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393225, 8, 0, 393228, 8, 0, 393229, 8, 0, 393232, 8, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 6, 0, 458754, 4, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 7, 0 )

[node name="Bugs" type="Node" parent="."]

[node name="Bug1" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 1896, 630 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug1"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug1"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug1"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.54902 )

[node name="Bug2" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 2112, 558 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug2"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug2"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug2"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.54902 )

[node name="Bug3" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 2214, 582 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug3"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug3"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug3"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.666667 )

[node name="Bug4" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 2376, 582 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug4"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug4"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug4"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.666667 )

[node name="Bug5" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 1848, 456 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug5"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug5"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug5"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.666667 )

[node name="Bug8" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 2298, 486 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug8"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug8"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug8"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.666667 )

[node name="Bug9" type="Area2D" parent="Bugs" groups=["Bug"]]
position = Vector2( 1818, 546 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug9"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug9"]
position = Vector2( 0, 6 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug9"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 14 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.666667 )

[node name="Mask" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 564, 438 )
scale = Vector2( 20, 20 )
texture = ExtResource( 6 )

[node name="Players" type="Node" parent="."]

[node name="Player1" parent="Players" instance=ExtResource( 2 )]
modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
self_modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
light_mask = 0
position = Vector2( 702.139, 468 )
scale = Vector2( 0.619, 0.619 )

[node name="Player2" parent="Players" instance=ExtResource( 8 )]
modulate = Color( 1, 1, 1, 0.764706 )
self_modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
light_mask = 0
position = Vector2( 600, 468.606 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 596, 450 )

[node name="MusicOff" type="Sprite" parent="."]
position = Vector2( 1147, 259 )
texture = ExtResource( 15 )

[node name="Button" type="Button" parent="MusicOff"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -24.0
margin_top = -30.0
margin_right = -12.0
margin_bottom = -10.0
rect_scale = Vector2( 4, 2.96 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="MusicOff"]
visible = false
margin_left = -168.0
margin_top = -12.0
margin_right = -40.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 13 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOff" type="AnimatedSprite" parent="."]
position = Vector2( 1152, 318 )
frames = SubResource( 39 )
animation = "On"

[node name="Button" type="Button" parent="AudioOff"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -30.0
margin_top = -30.0
margin_right = -18.0
margin_bottom = -10.0
rect_scale = Vector2( 3.95999, 2.84 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AudioOff"]
visible = false
margin_left = -168.0
margin_top = -12.0
margin_right = -40.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 13 )
text = "Sfx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -3.0
pitch_scale = 0.91
autoplay = true

[connection signal="timeout" from="CanvasLayer/Hud/Timer" to="CanvasLayer/Hud" method="_on_Timer_timeout"]
[connection signal="dead" from="Players/Player1" to="." method="_on_Player1_dead"]
[connection signal="dead" from="Players/Player2" to="." method="_on_Player2_dead"]
